deploy/deploy_all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-app
  template:
    metadata:
      labels:
        app: ghost-app
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: ghost-app
        image: ghost:5.62.0-alpine
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          limits:
            cpu: "1"
            memory: 512Mi
        ports:
        - containerPort: 2368
          name: ghost-app
        volumeMounts:
        - name: azure-managed-disk
          mountPath: /var/lib/ghost/content/
      volumes:
      - name: azure-managed-disk
        persistentVolumeClaim:
          claimName: ghost-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-app
  namespace: ghost 
spec:
  type: ClusterIP
  selector:
    app: ghost-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
